--- a/ZLOnlineAnalysisSystem/src/main/resources/application-pro.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application-pro.yml
@@ -1,2 +1,8 @@
 server:
   port: 9250
+spring:
+  datasource:
+      driver-class-name: com.mysql.jdbc.Driver
+      username: root
+      password: Scada2016!
+      url: jdbc:mysql://192.168.10.99:3306/zheling?useUnicode=true&characterEncoding=utf8
