--- a/ZLOnlineAnalysisSystem/src/main/resources/db.properties
+++ b/ZLOnlineAnalysisSystem/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/awesome?useUnicode=true&characterEncoding=utf8
+db.url=jdbc:mysql://192.168.10.99:3306/zheling?useUnicode=true&characterEncoding=utf8
 db.username=root
 db.password=password
