--- a/ZLOnlineAnalysisSystem/pom.xml
+++ b/ZLOnlineAnalysisSystem/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>com.sk</groupId>
 	<artifactId>zl</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>zl</name>
+	<version>0.0.1</version>
+	<name>zlApplication</name>
 	<description>A Spring Boot project for zl</description>
 
 	<properties>
@@ -36,11 +36,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.mybatis.spring.boot</groupId>-->
-			<!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
-			<!--<version>2.0.0</version>-->
-		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -88,6 +83,37 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<!-- 本地开发环境 -->
+			<id>dev</id>
+			<properties>
+				<profiles.active>dev</profiles.active>
+				<modifier></modifier>
+			</properties>
+			<activation>
+				<!-- 默认的，不加参数时执行这个profile -->
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<!-- 测试环境 -->
+			<id>test</id>
+			<properties>
+				<profiles.active>test</profiles.active>
+				<modifier>-test</modifier>
+			</properties>
+		</profile>
+		<profile>
+			<!-- 生产环境 -->
+			<id>prod</id>
+			<properties>
+				<profiles.active>pro</profiles.active>
+				<modifier>-pro</modifier>
+			</properties>
+		</profile>
+	</profiles>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -117,6 +143,22 @@
 				<!--</dependencies>-->
 			<!--</plugin>-->
 		</plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>skdb.yml</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <excludes>
+                    <exclude>application-{profiles.active}.yml</exclude>
+                </excludes>
+            </resource>
+        </resources>
 	</build>
 
 </project>
