--- a/ZLOnlineAnalysisSystem/pom.xml
+++ b/ZLOnlineAnalysisSystem/pom.xml
@@ -62,7 +62,12 @@
 			<version>1.18.4</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.14</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
