--- a/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
@@ -3,10 +3,17 @@ server:
 
 spring:
   datasource:
+    zheling:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
-      password: password
-      url: jdbc:mysql://localhost:3306/awesome?useUnicode=true&characterEncoding=utf8
+      password: Scada2016!
+      url: jdbc:mysql://192.168.10.48:3306/zheling?useUnicode=true&characterEncoding=utf8
+    skalarm:
+      driver-class-name: com.mysql.jdbc.Driver
+      username: root
+      password: Scada2016!
+      url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true&characterEncoding=utf8
+
 
 skdb:
   uri: http://192.168.10.48:80    # 数据库连接信息
