--- a/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
@@ -7,12 +7,14 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: Scada2016!
-      url: jdbc:mysql://192.168.10.48:3306/zheling?useUnicode=true&characterEncoding=utf8
+#      jdbc-url: jdbc:mysql://192.168.10.48:3306/zheling?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://192.168.10.99:3306/zheling?useUnicode=true&characterEncoding=utf8
     skalarm:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: Scada2016!
-      url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true&characterEncoding=utf8
+#      jdbc-url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://192.168.10.99:3306/zheling?useUnicode=true&characterEncoding=utf8
 
 
 skdb:
