--- a/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9251
+  port: 9257
 
 spring:
   datasource:
@@ -14,7 +14,7 @@ spring:
       username: root
       password: Scada2016!
 #      jdbc-url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true&characterEncoding=utf8
-      url: jdbc:mysql://192.168.10.99:3306/zheling?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://192.168.10.99:3306/skalarm?useUnicode=true
 
 
 skdb:
