--- a/ZLOnlineAnalysisSystem/src/main/resources/application-pro.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application-pro.yml
@@ -14,7 +14,7 @@ spring:
       username: root
       password: Scada2016!
 #      jdbc-url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true&characterEncoding=utf8
-      url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true
+      url: jdbc:mysql://192.168.10.48:3306/skalarm?useUnicode=true&characterEncoding=utf8
 
 
 skdb:
