add now alarm interface.

--- a/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application-dev.yml
@@ -6,9 +6,9 @@ spring:
     zheling:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
-      password: Scada2016!
+      password: password
 #      jdbc-url: jdbc:mysql://192.168.10.48:3306/zheling?useUnicode=true&characterEncoding=utf8
-      url: jdbc:mysql://192.168.10.99:3306/zheling?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://192.168.10.106:3306/awesome?useUnicode=true&characterEncoding=utf8
     skalarm:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
