--- a/ZLOnlineAnalysisSystem/src/main/resources/application.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: @profiles.active@
   jpa:
-    show-sql: true
+#    show-sql: true
     hibernate:
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
