--- a/ZLOnlineAnalysisSystem/pom.xml
+++ b/ZLOnlineAnalysisSystem/pom.xml
@@ -68,6 +68,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.14</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-starter-client -->
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.1.3</version>
+		</dependency>
 
 
         <dependency>
