--- a/ZLOnlineAnalysisSystem/src/main/resources/application.yml
+++ b/ZLOnlineAnalysisSystem/src/main/resources/application.yml
@@ -60,10 +60,10 @@ swagger:
 
 
 
-#logging:
-#  level:
-#    org:
-#      hibernate:
-#        SQL: DEBUG
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
 
 
